Fix MonacoQueryInput overflow

--- a/web/src/search/input/MonacoQueryInput.scss
+++ b/web/src/search/input/MonacoQueryInput.scss
@@ -25,6 +25,7 @@
         }
         .monaco-editor-background {
             width: 100% !important;
+            overflow: visible !important;
         }
         .monaco-editor-hover-content {
             padding: 0.25rem;
@@ -49,6 +50,7 @@
 
     &__toggle-container {
         padding-right: 0.35rem;
+        padding-left: 0.35rem;
     }
 }
 
